--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 sortedcontainers==2.4.0
+gunicorn>=20.1.0
 soupsieve==2.6
 SQLAlchemy==2.0.39
 starlette==0.46.1
